# interactive-computer-graphics

./: .gitignore  README.md
Exercise1/: written-tasks.txt
Exercise1/glframework/: README.md
Exercise1/glframework/ext/glfw/: CMakeLists.txt
Exercise1/glframework/include/: objloader.h
Exercise1/glframework/shaders/: default.vert  light.frag
Exercise1/glframework/src/: glframework.h  main.cpp
Exercise2/glframework/: CMakeLists.txt  CMake_submission.cmake
Exercise2/glframework/shaders/: julia.frag  julia.vert
Exercise2/glframework/src/: glframework.h  main.cpp
